fix(timeline): fix unnecessary horizontal scrolling on timeline 2 and revise comment on .timeline class

--- a/react-app/src/css/index.css
+++ b/react-app/src/css/index.css
@@ -171,8 +171,8 @@
 .timeline {
     padding-left: 1rem;
     list-style: none;
-    width: calc(100% - 17px);
-    margin: 0 0 0 0;
+    width: calc(100% - 17px); /* 17px accounting for the timeline line and dot */
+    margin: 0;
 }
 
 .timeline li {
@@ -295,6 +295,10 @@
     background-color: var(--lighter-bg);
 
     flex-shrink: 0;
+}
+
+.timeline-2__timeline {
+    overflow-x: clip;
 }
 
 .timeline-2__timeline li {
